# weather-app

./: .env  Cargo.toml  README.md
src/backend/: handlers.rs  main.rs  weather.rs
src/frontend/src/: App.css  App.js
