[package]
name = "weather_api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
dotenvy = "0.15"
hyper = "1.0"
tower = "0.4"
tower-http = { version = "0.3", features = ["cors"] } 

[[bin]]
name = "weather_api"
path = "src/backend/main.rs"
